add publish profile

--- a/AutoSchedule.UI/wwwroot/index.html
+++ b/AutoSchedule.UI/wwwroot/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <!-- <script src="_content/BlazorFluentUI.CoreComponents/blazorFluentUi.min.js"></script> -->
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_framework/blazor.webassembly.js?version=6"></script>
     <!-- Loading progress indicator -->
     <script type="text/javascript">
         var i = 0;
